# dosido

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
app/: backfill_worker.py  broadcaster.py  config.py  main.py  matching.py  models.py  redis_client.py  scoring.py  state.py
app/routes/: admin_api.py  public_api.py  signal_api.py  views.py
app/static/css/: dosido.css
app/static/js/: connection.js  search.js  sse.js  timer.js
app/templates/: 404.html  admin.html  base.html  mobile.html  profile_card.html  screen.html
app/templates/partials/: admin_pairings.html  admin_pool.html  admin_round_control.html  admin_signals.html  checkin_board.html  mutual_board.html  pairings_grid.html  signal_prompt.html
pipeline/: enrich.py  fun_slugs.py  generate_badges.py  ingest.py  load_to_redis.py  prompts.py  score_pairs.py
scripts/: run_pipeline.py  seed_test_data.py  serve.py  test_profile.py
tests/: conftest.py  test_api.py  test_broadcast.py  test_matching.py  test_simulation.py
