[project]
name = "dosido"
version = "0.1.0"
description = "Real-time matchmaking for structured networking events. Named after the cookie, not the dance."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "redis[hiredis]>=5.2",
    "networkx>=3.4",
    "anthropic>=0.42",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "qrcode[pil]>=8.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.25",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[project.scripts]
dosido-seed = "scripts.seed_test_data:main"
dosido-load = "pipeline.load_to_redis:main"
dosido-serve = "scripts.serve:main"
dosido-test-profile = "scripts.test_profile:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
per-file-ignores = {"pipeline/prompts.py" = ["E501"], "scripts/seed_test_data.py" = ["E501"]}

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
